WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308348
The WebContent process should not prevent local file loads where the Networking process has access by extension
https://bugs.webkit.org/show_bug.cgi?id=308348
Summary
The WebContent process should not prevent local file loads where the Networki...
Per Arne Vollan
Reported
2026-02-20 16:16:50 PST
The WebContent process should not prevent local file loads where the Networking process has access by extension.
Attachments
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2026-02-20 16:16:52 PST
<
rdar://problem/170610201
>
Per Arne Vollan
Comment 2
2026-02-20 16:18:53 PST
Pull request:
https://github.com/apple/WebKit/pull/4523
EWS
Comment 3
2026-02-22 18:39:24 PST
Committed
305413.335@safari-7624-branch
(00906723527a): <
https://commits.webkit.org/305413.335@safari-7624-branch
> Reviewed commits have been landed. Closing PR #4523 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug