The WebContent process should not prevent local file loads where the Networking process has access by extension https://bugs.webkit.org/show_bug.cgi?id=308348 rdar://170610201

Reviewed by Chris Dumez.

The UI process is granting the Networking process access to its temp directory. If the UI process is performing
a load of a local file inside that directory, the WebContent process should not block it.

* Source/WebKit/NetworkProcess/NetworkResourceLoadParameters.cpp:
(WebKit::networkProcessHasAccessByExtensions):
(WebKit::NetworkResourceLoadParameters::createSandboxExtensionHandlesIfNecessary):
* Source/WebKit/Shared/WebProcessCreationParameters.h:
* Source/WebKit/Shared/WebProcessCreationParameters.serialization.in:
* Source/WebKit/UIProcess/Cocoa/WebProcessPoolCocoa.mm:
(WebKit::WebProcessPool::platformInitializeWebProcess):
* Source/WebKit/WebProcess/WebProcess.h:
* Source/WebKit/WebProcess/cocoa/WebProcessCocoa.mm:
(WebKit::WebProcess::accessibilityFocusedUIElement):

Identifier: 305413.335@safari-7624-branch