Source/WebKit/NetworkProcess/NetworkResourceLoadParameters.cpp
@@ -33,6 +33,16 @@
 namespace WebKit {
 using namespace WebCore;
 
+static bool networkProcessHasAccessViaSandboxExtension(const String& path)
+{
+#if PLATFORM(IOS_FAMILY)
+    return path.startsWith(WebProcess::singleton().containerTemporaryDirectory());
+#else
+    UNUSED_PARAM(path);
+    return false;
+#endif
+}
+
 bool NetworkResourceLoadParameters::createSandboxExtensionHandlesIfNecessary()
 {
     if (request.httpBody()) {
@@ -47,17 +57,18 @@ bool NetworkResourceLoadParameters::createSandboxExtensionHandlesIfNecessary()
     }
 
     if (request.url().protocolIsFile()) {
+        String path = request.url().fileSystemPath();
 #if HAVE(AUDIT_TOKEN)
         if (auto networkProcessAuditToken = WebProcess::singleton().ensureNetworkProcessConnection().networkProcessAuditToken()) {
-            if (auto handle = SandboxExtension::createHandleForReadByAuditToken(request.url().fileSystemPath(), *networkProcessAuditToken))
+            if (auto handle = SandboxExtension::createHandleForReadByAuditToken(path, *networkProcessAuditToken))
                 resourceSandboxExtension = WTF::move(*handle);
         } else
 #endif
         {
-            if (auto handle = SandboxExtension::createHandle(request.url().fileSystemPath(), SandboxExtension::Type::ReadOnly))
+            if (auto handle = SandboxExtension::createHandle(path, SandboxExtension::Type::ReadOnly))
                 resourceSandboxExtension = WTF::move(*handle);
         }
-        return resourceSandboxExtension.has_value();
+        return resourceSandboxExtension.has_value() || networkProcessHasAccessViaSandboxExtension(path);
     }
     return true;
 }
